@@ -1,3 +1,8 @@
+2012-12-20  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/54818
+	* gfortran.dg/transfer_intrinsic_4.f: New.
+
 2012-12-18  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>
 
 	Backport from mainline
